Window stretching div required some styling changes for more correct scrolling
It seems like scroll accommodates well changing table sizes, and performs
close enough to regular scroll.

I don't quite get how view port relative styling is supposed to work, but decent
enough chunk of window is taken for the table.

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -69,20 +69,21 @@ Pure menus end
 #app {
     margin: 1em;
     position: fixed;
+    z-index: 1;
 }
 
 #tablesizer {
     position: absolute;
-    left: 1em;
-    top: 22em;
+    left: 0;
+    top: 0;
 }
 
 .pos {
     position: fixed;
     left: 1em;
     top: 22em;
-    max-width: 70vh;
-    max-height: 50vh;
+    max-width: 110vh;
+    max-height: 67vh;
     overflow: hidden;
 }
 #heading {
